# sign-recognition-lstm

./: Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
