[tool.poetry]
name = "sign-recognition-lstm"
version = "0.1.0"
description = ""
authors = ["davesanna <sanna.davide32@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
scipy = "^1.8.1"
tensorflow-metal = "^0.5.0"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"
tensorflow-macos = "^2.9.2"
pandas = "^1.4.3"
ipykernel = "^6.15.0"
jupyterlab = "^3.4.3"
mediapipe = "^0.8.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
